# FinTracker

./: .bazelrc  .gitignore  BUILD.bazel  FinTracker.entitlements  MODULE.bazel  Package.resolved  Package.swift  README.md  swift.swiftformat
App/: BUILD.bazel
App/FinTracker/: ContentView.swift  FinTrackerApp.swift  MainView.swift
App/FinTrackerTests/: FinTrackerTests.swift
App/Sources/: App.swift
App/Sources/Views/: ContentView.swift
App/Tests/: FinTrackerTests.swift
Core/Sources/: Core.swift
Core/Tests/: CoreTests.swift
FinTracker.xcodeproj/: project.pbxproj
FinTracker.xcodeproj/xcshareddata/xcschemes/: Core.xcscheme  CoreTests.xcscheme  FinTracker.xcscheme  Networth.xcscheme  NetworthTests.xcscheme  UserInterfaceTests.xcscheme
FinTracker.xcworkspace/: contents.xcworkspacedata
FinTracker.xcworkspace/xcshareddata/swiftpm/: Package.resolved
Networth/: BUILD.bazel
Networth/Sources/: NetworthTabView.swift
Networth/Sources/NetworkChartView/: NetworkChartView.swift  NetworkChartViewModel.swift
Networth/Sources/Networth.docc/: Networth.md
Networth/Sources/NetworthChartView/: NetworthChartView.swift  NetworthChartViewModel.swift
Networth/Tests/: NetworthTests.swift
UserInterface/Sources/: ChartView.swift  Images.swift  UserInterface.swift
UserInterface/Sources/UserInterface.docc/: UserInterface.md
UserInterface/Tests/: UserInterfaceTests.swift
scripts/: format.sh  graph.sh
