load("@rules_swift//swift:swift.bzl", "swift_library")
load("@rules_apple//apple:ios.bzl", "ios_application")
load("@rules_apple//apple:macos.bzl", "macos_application")

package(default_visibility = ["//visibility:public"])

swift_library(
    name = "App",
    deps = [
        "//Networth:Networth",
    ],
    srcs = glob([
        "Sources/**/*.swift"
    ]),
    copts = [
            # Sets the Swift Language Version (SWIFT_VERSION = 6.0)
            "-swift-version", "6",

            # Enables Concise Concurrency (SWIFT_APPROACHABLE_CONCURRENCY = YES)
            "-Xfrontend", "-enable-upcoming-feature", "-Xfrontend", "ConciseMagicFile",

            # Sets Strict Concurrency Checking (SWIFT_STRICT_CONCURRENCY = complete)
            "-Xfrontend", "-strict-concurrency=complete",

            # Sets Default Actor Isolation (SWIFT_DEFAULT_ACTOR_ISOLATION = MainActor)
            "-Xfrontend", "-default-actor-isolation=nonisolated",
    ],
)

bundle_id = "se.buildswift.FinTracker"
bundle_name = "FinTracker"
minimum_deployment_os_version = "26.1"

ios_application(
    name = "fintracker_iOS",
    bundle_id = bundle_id,
    bundle_name = bundle_name,
    families = ["iphone"],
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "26.1",
    minimum_deployment_os_version = minimum_deployment_os_version,
    deps = [":App"],
)

macos_application(
    name = "fintracker_macOS",
    bundle_id = bundle_id,
    bundle_name = bundle_name,
    infoplists = ["Resources/Info.plist"],
    minimum_os_version = "26.1",
    minimum_deployment_os_version = minimum_deployment_os_version,
    deps = [":App"],
)
